refactor: padroniza UI/UX e remove arquitetura legada do GLPI